manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "aksamerilifepoc-83be"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "aksamerilifepoc-83be"
  template:
    metadata:
      labels:
        app: "aksamerilifepoc-83be"
    spec:
      containers:
        - name: "aksamerilifepoc-83be"
          image: "acramerilifepoc.azurecr.io/aksamerilifepoc"
          ports:
          - containerPort: 80
